# RadEffects-Geant4

./: README.md
CURRENT PACKAGE/: CMakeLists.txt  README  myrun.mac  vis.mac
CURRENT PACKAGE/include/: Action.hh  ConstructWorld.hh  DetectorMessenger.hh  Dose.hh  ParticleGun.hh  Physics.hh  run.hh
CURRENT PACKAGE/src/: DetectorMessenger.cc  Dose.cc  ElectronCapture.cc  ParticleGun.cc  PhysList.cc  StepAction.cc  event.cc  run.cc
CURRENT_PACKAGE_WINDOWS/: AlBoxRun.mac  Data_Analysis.py  myrun.mac  pack.cc  vis.mac
CURRENT_PACKAGE_WINDOWS/include/: Action.hh  ConstructWorld.hh  DetectorMessenger.hh  Dose.hh  ElectronCapture.hh  PhysList.hh  RadPackSensitiveDetector.hh  RunActionMessenger.hh  SensitiveDetector.hh  StepAction.hh  event.hh  run.hh
CURRENT_PACKAGE_WINDOWS/src/: Action.cc  ConstructWorld.cc  DetectorMessenger.cc  ParticleGun.cc  Physics.cc  RunActionMessenger.cc  SensitiveDetector.cc  StepAction.cc  event.cc  run.cc
GeometryPlayground/: CMakeLists.txt  RadiationPackage.cc  pack.cc  theRun.mac
GeometryPlayground/include/: RadPackActionInitialization.hh  RadPackConstruction.hh  RadPackPhysList.hh  RadPackSensitiveDetector.hh  dimensions.hh
GeometryPlayground/src/: RadPackActionInitialization.cc  RadPackConstruction.cc  RadPackPhysList.cc  RadPackSensitiveDetector.cc
New_Current_Package/: RadiationPackage.cc  analysis.C  theRun.mac
New_Current_Package/data/: primaryRun_01.root  primaryRun_02.root
New_Current_Package/include/: RadPackConstruction.hh  RadPackGeneratorAction.hh  RadPackGeometryMessenger.hh  RadPackRunAction.hh  (+1 more)
(+6 files in other folders)
